added recompose button

--- a/index.html
+++ b/index.html
@@ -11,8 +11,11 @@
         <div id="thePage">
             <canvas id="theCanvas" width="500" height="500"></canvas>
             <ul id="theColors"></ul>
-            <button id="shuffle">Shuffle!</button>
-            <button id="download">Download!</button>
+            <div id="theButtons">
+                <button id="shuffle">Shuffle!</button>
+                <button id="recompose">Recompose!</button>
+                <button id="download">Download!</button>
+            </div>
         </div>
     </body>
 </html>
