Add more screen sizes

--- a/index.html
+++ b/index.html
@@ -19,7 +19,11 @@
                     <option value="0">500x500</option>
                     <option value="1">320x480 (iPhone)</option>
                     <option value="2">640x960 (iPhone 4)</option>
-                    <option value="3">1440x900 (laptop)</option>
+                    <option value="3">1024x768</option>
+                    <option value="4">1440x900</option>
+                    <option value="5">1600x1000</option>
+                    <option value="6">1600x1200</option>
+                    <option value="7">1920x1200</option>
                 </select>
             </div>
         </div>
