No more wandering canvas

--- a/index.html
+++ b/index.html
@@ -9,7 +9,9 @@
     </head>
     <body>
         <div id="thePage">
-            <canvas id="theCanvas" width="500" height="500"></canvas>
+            <div id="displayArea">
+                <canvas id="theCanvas" width="500" height="500"></canvas>
+            </div>
             <ul id="theColors"></ul>
             <div id="theButtons">
                 <button id="shuffle">Shuffle!</button>
