add a janky header

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
         <script type="text/javascript" src="colortoy.js"></script>
     </head>
     <body>
+        <div id="theHeader">CHROMATI.CO</div>
         <div id="thePage">
             <div id="displayArea">
                 <canvas id="theCanvas" width="500" height="500"></canvas>
