--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
     <head>
         <title>Chromati.co</title>
         <meta charset="utf-8" />
-        <link rel="stylesheet" href="colortoy.css" />
+        <link rel="stylesheet" href="chromatico.css" />
         <script type="text/javascript" src="http://code.jquery.com/jquery-1.6.4.min.js"></script>
-        <script type="text/javascript" src="colortoy.js"></script>
+        <script type="text/javascript" src="chromatico.js"></script>
     </head>
     <body>
         <div id="theHeader">CHROMATI.CO</div>
