Ability to change colors

--- a/index.html
+++ b/index.html
@@ -52,6 +52,9 @@
                 <div>Made by <a href="http://www.jaykayess.com/">Justin Kerr Sheckler</a> 2011</div>
             </div>
         </div>
+        <div id="colorControls">
+            <button id="newColor">New</button>
+        </div>
     </body>
 </html>
 
