--- a/index.html
+++ b/index.html
@@ -4,7 +4,9 @@
         <title>Chromati.co</title>
         <meta charset="utf-8" />
         <link rel="stylesheet" href="chromatico.css" />
-        <script type="text/javascript" src="http://code.jquery.com/jquery-1.6.4.min.js"></script>
+        <link type="text/css" href="css/smoothness/jquery-ui-1.8.16.custom.css" rel="Stylesheet" />
+        <script type="text/javascript" src="js/jquery-1.6.2.min.js"></script>
+        <script type="text/javascript" src="js/jquery-ui-1.8.16.custom.min.js"></script>
         <script type="text/javascript" src="chromatico.js"></script>
     </head>
     <body>
@@ -19,6 +21,12 @@
                     <div id="colorButtons">
                         <button id="fewerColors">-</button>
                         <button id="moreColors">+</button>
+                    </div>
+                    <div id="colorSliders">
+                        <label>Saturation</label><br />
+                        <div id="expS"></div>
+                        <label>Brightness</label><br />
+                        <div id="expV"></div>
                     </div>
                 </div>
                 <div id="theButtons">
