OK, color sliders work pretty well now

--- a/index.html
+++ b/index.html
@@ -23,9 +23,9 @@
                         <button id="moreColors">+</button>
                     </div>
                     <div id="colorSliders">
-                        <label>Saturation</label><br />
+                        <label id="labelS">Saturation</label><br />
                         <div id="expS"></div>
-                        <label>Brightness</label><br />
+                        <label id="labelV">Brightness</label><br />
                         <div id="expV"></div>
                     </div>
                 </div>
