new logo + image buttons, but drop-down and form fields need work

--- a/index.html
+++ b/index.html
@@ -14,11 +14,11 @@
             <canvas id="theCanvas"></canvas>
         </div>
         <div id="theSidebar">
-            <div id="theHeader">CHROMATI.CO</div>
+            <div id="theHeader"></div>
             <ul id="theColors"></ul>
             <div id="colorButtons">
-                <button id="fewerColors">-</button>
-                <button id="moreColors">+</button>
+                <button id="fewerColors"></button>
+                <button id="moreColors"></button>
             </div>
             <div id="colorSliders">
                 <label id="labelS">Saturation</label><br />
@@ -28,9 +28,9 @@
             </div>
         </div>
         <div id="theButtons">
-            <button id="shuffle">Shuffle!</button>
-            <button id="recompose">Recompose!</button>
-            <button id="download">Download!</button>
+            <button id="shuffle"></button>
+            <button id="recompose"></button>
+            <button id="download"></button>
             <select id="sizeMenu">
                 <option value="0">500x500</option>
                 <option value="1">320x480 (iPhone)</option>
@@ -58,7 +58,7 @@
             <div>Made by <a href="http://www.jaykayess.com/">Justin Kerr Sheckler</a> 2011</div>
         </div>
         <div id="colorControls">
-            <button id="newColor">New</button>
+            <button id="newColor"></button>
         </div>
     </body>
 </html>
