now with favicon

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
     <head>
         <title>Chromati.co</title>
         <meta charset="utf-8" />
+        <link rel="shortcut icon" href="img/favicon.png" />
         <link rel="stylesheet" href="css/chromatico.css" />
         <link type="text/css" href="css/chromatico/jquery-ui-1.8.16.custom.css" rel="Stylesheet" />
         <script type="text/javascript" src="js/jquery-1.6.2.min.js"></script>
