use HSL natively; better color controls

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
         <link type="text/css" href="css/chromatico/jquery-ui-1.8.16.custom.css" rel="Stylesheet" />
         <script type="text/javascript" src="js/jquery-1.6.2.min.js"></script>
         <script type="text/javascript" src="js/jquery-ui-1.8.16.custom.min.js"></script>
+        <script type="text/javascript" src="js/jquery.colors.bundle.min.js"></script>
         <script type="text/javascript" src="js/chromatico.js"></script>
     </head>
     <body>
@@ -21,11 +22,13 @@
                 <div id="colorButtons">
                     <button id="fewerColors"></button>
                     <button id="moreColors"></button>
+                    <button id="shuffleColors"></button>
+                    <button id="rotateColors"></button>
                 </div>
                 <div id="colorSliders">
                     <label id="labelS">Saturation</label><br />
                     <div id="expS"></div>
-                    <label id="labelV">Brightness</label><br />
+                    <label id="labelV">Luminance</label><br />
                     <div id="expV"></div>
                 </div>
             </div>
